--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^3.1.4",
     "axios": "^0.16.2",
-    "bootstrap-vue": "^0.22.0",
     "element-ui": "^1.4.2",
-    "iview": "^2.1.0",
-    "muse-ui": "^2.0.3",
     "nuxt": "^1.0.0-rc3",
     "vue-scrollto": "^2.7.2"
   },
