--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-demo",
+  "name": "nuxt-web",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "leolai <leolai.mail@qq.com>",
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "axios": "^0.16.2",
     "element-ui": "^1.4.2",
     "nuxt": "^1.0.0-rc3",
