--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "prod": "nuxt build && nuxt start",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
